test/good/classes/struct09.px

class A def
    f: Int->Bool = lambda x def
        return x >= 0

a = A()
print a.f(0)

a.f = lambda x def
    return x > 0
print a.f(0)
