test/bad/functions/lambda13.px

func f(Int g) Int def
    return 0

f(lambda -> 0)
